--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
 highlighter : highlight.js  # {highlight.js, prettify, highlight}
 hitheme     : tomorrow      # 
 widgets     : []            # {mathjax, quiz, bootstrap}
-mode        : selfcontained # {standalone, draft}
+mode        : standalone # {standalone, draft}
 knit        : slidify::knit2slides
 ---
 
@@ -30,30 +30,28 @@ knit        : slidify::knit2slides
 
 - Once you're ready, just click on `Fetch Properties` buttons to display your results.
 
----
+---  .codefont 
 
 ## Property Results
 
-<img style="float:right; margin:0px 20px 0px 20px;" src="rentresults.png" width="450px"/>
+
+<img style="float:right; margin:130px 20px 0px 20px;" src="rentresults.png" width="450px"/>
 
 
-```{r googlemap, echo=FALSE, results = 'asis'}
+
+```{r googlemap, echo=T, results = 'asis'}
 require(googleVis)
 load("stations.Rda")
 M<-gvisMap(df, "link" , "propertylink", options=list(showTip=TRUE,
-                                                     showLine=TRUE,
-                                                     enableScrollWheel=TRUE,
-                                                     mapType='normal', 
-                                                     width=450, height=270))
+                        enableScrollWheel=TRUE,mapType='normal',width=450, height=270))
 print(M,"chart")
 ```
-
 
 - Returns up to 100 properties from [zoopla](http://www.zoopla.co.uk). 
 
 - We compute the average and median prices  and show the distributions.
 
-- And use the `googleVis` library to show the locations of each property. Click on one of the properties in the above Google Map. [note: the map may not be displaying properly in Chrome browser -it seems to be a bit glitchy. On  a Mac try safari. If still not displaying try refreshing the slide. - sorry]
+- And use the `googleVis` library to show the locations of each property. Click on one of the properties in the above Google Map. [**note: Refresh browser if map is not showing**]
 
 ---
 
@@ -73,4 +71,3 @@ print(M,"chart")
 
 - Future versions of this app will include a lot more information such as: monthly commuting costs, and other outgoings set against your salary.
 
----
