--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,11 @@ widgets     : []            # {mathjax, quiz, bootstrap}
 mode        : standalone # {standalone, draft}
 knit        : slidify::knit2slides
 ---
-
+<style>
+strong {
+  font-weight: bold;
+}
+</style>
 ## Introduction
 
 - Have you been offered a job in London or thinking of moving there?  
@@ -24,34 +28,36 @@ knit        : slidify::knit2slides
 ## Finding Rental Properties 
 <img style="float:right; margin:0px 20px 0px 20px;" src="rentpanel.png" height="500px"/>
 
-- We only consider rental accomodation and the options available to you are: area interested in, search radius, price range, property type, and the number of bedrooms. 
+- We only consider rental accomodation with options such as: area interested in, search radius, price range, property type, and the number of bedrooms, availble to you.
 
--  The default location is 'Watford, England', but this can of course be changed to any area/town/village/postcode within the UK. 
+- We have set the default location to 'Watford, England' as a demo,  but this can of course be changed to any area/town/village/postcode within the UK. [N.B. We use Google geocode API to try and return an accurate address]
+
 
 - Once you're ready, just click on `Fetch Properties` buttons to display your results.
+
+- The app should warn you if no properties have been found within your search criterion. This usually means you should increase your search radius and/or your maximum price threshold.
+
+
 
 ---  .codefont 
 
 ## Property Results
 
 
-<img style="float:right; margin:130px 20px 0px 20px;" src="rentresults.png" width="450px"/>
+<img style="float:right; margin:90px 10px 0px 20px;" src="rentresults.png" width="500px"/>
 
 
 
 ```{r googlemap, echo=T, results = 'asis'}
 require(googleVis)
 load("stations.Rda")
-M<-gvisMap(df, "link" , "propertylink", options=list(showTip=TRUE,
-                        enableScrollWheel=TRUE,mapType='normal',width=450, height=270))
+M<-gvisMap(df, "link" , "propertylink", options=list(showTip=TRUE,enableScrollWheel=TRUE,mapType='normal',width=450, height=270))
 print(M,"chart")
 ```
 
-- Returns up to 100 properties from [zoopla](http://www.zoopla.co.uk). 
+- Returns up to 100 properties from [zoopla](http://www.zoopla.co.uk) and we compute the average and median prices  and show the distributions.
 
-- We compute the average and median prices  and show the distributions.
-
-- And use the `googleVis` library to show the locations of each property. Click on one of the properties in the above Google Map. [**note: Refresh browser if map is not showing**]
+- The `googleVis` library shows the locations of each property. Click on one of the properties in the above map. [<strong>note: refresh your browser if map above  is not displaying properly.</strong>]
 
 ---
 
@@ -59,15 +65,13 @@ print(M,"chart")
 
 <img style="float:left; margin:0px 20px 0px 20px;" src="transit.png" height="400px"/>
 
-- Once you are happy with your property results, the app will take your entered location and use it to compute train transit times via Google Maps API. 
+- Once you are happy with your property results, the app will take your entered location and use it for computing train transit times via Google Maps API. 
 
 - Simply enter your desired destination  e.g. this might be the place of work. 
 
-- Then, enter a search radius 
+- Enter a search radius and finally select a departure time. Default is set to roughly a rush hour time with the date always set to 'todays' date.
 
-- And finally a departure time. Default is set to roughly a rush hour time and the date set to todays.
+- The app will then return a list of stations within your search radius followed by transit times.
 
-- The app will then return a list of stations within yoru search radius followed by transit times.
-
-- Future versions of this app will include a lot more information such as: monthly commuting costs, and other outgoings set against your salary.
+- Future versions of this app will include a lot more information such as: monthly commuting costs, and other outgoings which you can set against your expected salary.
 
